Edit event dates working now

--- a/public/js/templates/posters/edit.html
+++ b/public/js/templates/posters/edit.html
@@ -19,7 +19,7 @@
     </div>
     <div class="control-group">
       <label for="poster_event_dates">Dates:</label>
-      <input type="text" name="event_dates" id="poster_event_dates" class="input-med" value="<%= event_dates %>" />
+      <input type="text" name="event_dates" id="poster_event_dates" class="input-med" value="<%- event_dates %>" />
     </div>
     <div class="control-group">
       <label for="poster_location">Location:</label>
