Added support for multiple size images (small, medium, large). Using imagemagick to resize/crop the originally uploaded image. Poster image is now an object that contains original, large, medium and small attributes.

--- a/public/js/templates/posters/new.html
+++ b/public/js/templates/posters/new.html
@@ -15,6 +15,9 @@
       <input type="button" class="btn" id="poster_image_btn" value="Find Image..." />
     </div>
     <input type="hidden" name="image_path" id="poster_image_path" value="" />
+    <input type="hidden" name="image_s_path" id="poster_image_s_path" value="" />
+    <input type="hidden" name="image_m_path" id="poster_image_m_path" value="" />
+    <input type="hidden" name="image_l_path" id="poster_image_l_path" value="" />
   </fieldset>
   <fieldset class="form-poster-info">
     <div class="control-group">
