--- a/public/js/templates/posters/single.html
+++ b/public/js/templates/posters/single.html
@@ -3,7 +3,7 @@
   <p><%= content %></p>
 </header>
 <section class="poster-single-image">
-  <img src="<%= image %>" alt="<%= title %>" class="poster-img poster-img-large" />
+  <img src="<%= images.large %>" alt="<%= title %>" class="poster-img poster-img-large" />
 </section>
 <section class="poster-single-info">
   <% if (dates.length > 0) { %>
