--- a/public/js/templates/posters/item.html
+++ b/public/js/templates/posters/item.html
@@ -1,5 +1,5 @@
 <figure>
-	<a href="#posters/<%= _id %>"><img src="<%= image %>" class="poster-img poster-img-small" alt="<%= title %>"></a>
+	<a href="#posters/<%= _id %>"><img src="<%= images.small %>" class="poster-img poster-img-small" alt="<%= title %>"></a>
 	<figcaption>
 		<h3 class="poster-excerpt-title"><a href="#posters/<%= _id %>"><%= title %></a></h3>
 		<p>Posted <%= modified %></p>
